# SPL-Assignment1

./: Agent.cpp  Agent.h  CMakeLists.txt  Graph.cpp  Graph.h  Session.cpp  Session.h  Tree.cpp  Tree.h  main.cpp  makefile  output.json
Configs/: config.json  config1.json  config2.json  config3.json  config4.json
include/: Agent.h  Graph.h  Session.h  Tree.h
output/: outputTest.json
src/: Agent.cpp  Graph.cpp  Session.cpp  Tree.cpp  main.cpp
